--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,7 @@
 /* TODO Add site wide styles */
+* {
+  /* for title */
+  font-family: 'Antonio', sans-serif;
+  /* for text */
+  font-family: 'Cabin', sans-serif;
+}
