--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -7,20 +7,25 @@
   color: white;
   margin-bottom: 100px;
   position: relative;
-  overflow: hidden;
-  min-height: 75vh;
-  min-width: 100vh;
-  background: rgba(0, 0, 0, 0.25);
+  /* overflow: hidden; */
+  /* min-height: 75vh; */
+  /* min-width: 100vh; */
+  width: 100%;
+  height: 76.5vh;
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .home-video {
   position: absolute;
   z-index: -1;
-  top: 30%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  /* top: 30%;
   left: 50%;
   transform: translate(-50%, -30%);
   min-width: 100%;
-  min-height: 100%;
+  min-height: 100%; */
 }
 
 .video-des{
@@ -29,4 +34,21 @@
 
 .video-title{
   font-size: 120px;
+}
+
+.video-line{
+  position: absolute;
+  width: 1230px;
+  height: 1000px;
+  left: 335px;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+}
+
+.video-line-2{
+  position: absolute;
+  width: 1230px;
+  height: 1000px;
+  left: 652px;
+  border-left: 1px solid white;
 }
