--- a/react-app/src/components/TicketForm/TicketForm.css
+++ b/react-app/src/components/TicketForm/TicketForm.css
@@ -1,18 +1,101 @@
-.ticket-mother{
-  display: flex;
+.ticket-top-wrapper {
+  background-image: url(./TicketImages/ticketBanner.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* height: 30vh; */
+  width: 100%;
+  height: 200px;
+  background-position: -50px 9px;
+  /* position: relative; */
   justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+.ticket-title {
+  width: 150px;
+  margin-top: 60px;
+}
+
+
+.ticket-mother {
+  /* display: flex;
+  justify-content: center; */
   /* align-items: center; */
 }
 
-.ticket-wrapper{
+.ticket-form-wrapper{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+}
+
+.ticket-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  margin-top: 60px;
+  width: 800px;
+}
+
+.ticket-form-title-des{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 40px;
 
 }
 
-.ticket-type{
+.ticket-form-title{
+  font-size: 40px;
+  font-weight: bolder;
+  padding: 0px 10px;
+  margin-bottom: 10px;
+}
+
+.ticket-form-des{
+  font-size: 14px;
+  padding: 0px 10px;
+  color: #666666;
+  letter-spacing: 2px;
+}
+
+.ticket-support-wrapper {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: row;
+  font-size: 11px;
+  gap: 7px;
+  width: 700px;
+  justify-content: center;
+}
+
+.ticket-support {
+  text-decoration: none;
+  color: inherit;
+  color: #666666;
+}
+
+.ticket-type {
   /* border: 1px solid black; */
+}
+
+.ticket-input-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+}
+
+.ticket-form-details{
+  color: #666666;
+  font-weight: bold;
+  padding-bottom: 10px;
+  font-size: 10px;
+  border-bottom: 1px solid #D2D2D2;
+  width: 100%;
 }
