--- a/react-app/src/components/TicketForm/TicketForm.css
+++ b/react-app/src/components/TicketForm/TicketForm.css
@@ -24,7 +24,7 @@
   /* align-items: center; */
 }
 
-.ticket-form-wrapper{
+.ticket-form-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -38,10 +38,11 @@
   align-items: center;
   align-content: center;
   margin-top: 60px;
-  width: 800px;
+  width: 770px;
+  margin-bottom: 60px;
 }
 
-.ticket-form-title-des{
+.ticket-form-title-des {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,18 +51,18 @@
 
 }
 
-.ticket-form-title{
+.ticket-form-title {
   font-size: 40px;
   font-weight: bolder;
   padding: 0px 10px;
   margin-bottom: 10px;
 }
 
-.ticket-form-des{
+.ticket-form-des {
   font-size: 14px;
   padding: 0px 10px;
   color: #666666;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
 }
 
 .ticket-support-wrapper {
@@ -70,7 +71,7 @@
   flex-direction: row;
   font-size: 11px;
   gap: 7px;
-  width: 700px;
+  width: 750px;
   justify-content: center;
 }
 
@@ -89,13 +90,81 @@
   flex-direction: column;
   justify-content: center;
   text-align: left;
+  margin-bottom: 20px;
+  width: 100%;
 }
 
-.ticket-form-details{
+.ticket-form-details {
   color: #666666;
   font-weight: bold;
   padding-bottom: 10px;
   font-size: 10px;
   border-bottom: 1px solid #D2D2D2;
   width: 100%;
+}
+
+.ticket-input-wrapper-1,
+.ticket-input-wrapper-2 {
+  width: 55%;
+}
+
+.ticket-input-wrapper-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* width: 100%; */
+}
+
+.ticket-input-wrapper-1 {
+  margin-top: 40px;
+}
+
+.ticket-input {
+  padding: 10px 20px;
+  /* width: 100%; */
+}
+
+.ticket-label {
+  font-size: 10px;
+  margin-bottom: 5px;
+  display: flex;
+  flex-direction: row;
+  letter-spacing: 1px;
+}
+
+.fa-star-of-life {
+  color: red;
+  font-size: 5px;
+  display: flex;
+  align-items: flex-start;
+}
+
+#ticket-des {
+  resize: none;
+  height: 100px;
+}
+
+#type:hover {
+  color: #6F2B36;
+}
+
+#type:focus {
+  color: black
+}
+
+.button-create-ticket {
+  border: none;
+  background: #E4373C;
+  display: flex;
+  font-size: 11px;
+  font-weight: bold;
+  color: white;
+  /* padding: 10px 20px; */
+  cursor: pointer;
+  justify-content: center;
+  width: 180px;
+  height: 44px;
+  align-items: center;
+  margin-top: 10px;
 }
