--- a/react-app/src/components/UserTickets/UserTicket.css
+++ b/react-app/src/components/UserTickets/UserTicket.css
@@ -22,6 +22,10 @@
 .individual-ticket{
   display: flex;
   flex-direction: row;
+  /* justify-content: space-between; */
+  /* width: 100%; */
+  padding: 10px;
+  text-align: flex-start;
 }
 
 .my-ticket-top{
@@ -29,4 +33,61 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.ticket-table-fields{
+  display: flex;
+  flex-direction: row;
+  /* justify-content: space-between; */
+  width: 100%;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  padding-bottom: 10px;
+  color: #8B9199;
+  font-size: 10px;
+  border-bottom: 1px solid #ECE8E1;
+}
+
+.ticket-table-subject-1{
+  width: 310px;
+}
+
+.ticket-table-id-1{
+  width: 70px;
+  margin-left: 6%;
+}
+
+.ticket-table-created-1{
+  width: 150px;
+  margin-left: 7%;
+}
+
+.ticket-table-status-1{
+  width: 100px;
+  margin-left: 6%;
+}
+
+
+.ticket-table-subject-2{
+  width: 300px;
+}
+
+.ticket-table-id-2{
+  width: 50px;
+  margin-left: 6%;
+}
+
+.ticket-table-created-2{
+  width: 150px;
+  margin-left: 10%;
+}
+
+.ticket-table-status-2{
+  width: 70px;
+  margin-left: 6%;
+}
+
+
+.individual-ticket:nth-child(even){
+  background-color: #FAFAFA;
 }
