--- a/react-app/src/components/TicketForm/TicketForm.css
+++ b/react-app/src/components/TicketForm/TicketForm.css
@@ -2,11 +2,9 @@
   background-image: url(./TicketImages/ticketBanner.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  /* height: 30vh; */
-  width: 103%;
-  height: 200px;
-  background-position: -50px 9px;
-  /* position: relative; */
+  height: 22vh;
+  width: auto;
+  background-position: 0px 9px;
   justify-content: center;
   display: flex;
   align-items: center;
@@ -38,7 +36,7 @@
   align-items: center;
   align-content: center;
   margin-top: 60px;
-  width: 770px;
+  width: 800px;
   margin-bottom: 60px;
 }
 
@@ -47,15 +45,16 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 
 }
 
 .ticket-form-title {
-  font-size: 40px;
+  font-size: 50px;
   font-weight: bolder;
   padding: 0px 10px;
-  margin-bottom: 10px;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
 }
 
 .ticket-form-des {
@@ -66,13 +65,14 @@
 }
 
 .ticket-support-wrapper {
-  margin-top: 60px;
+  margin-top: 65px;
   display: flex;
   flex-direction: row;
-  font-size: 11px;
+  font-size: 10px;
   gap: 7px;
-  width: 750px;
+  width: 790px;
   justify-content: center;
+  letter-spacing: 1px;
 }
 
 .ticket-support {
@@ -101,6 +101,7 @@
   font-size: 10px;
   border-bottom: 1px solid #D2D2D2;
   width: 100%;
+  letter-spacing: 1.5px;
 }
 
 .ticket-input-wrapper-1,
@@ -121,13 +122,13 @@
 }
 
 .ticket-input {
-  padding: 10px 20px;
+  padding: 15px 20px;
   /* width: 100%; */
 }
 
 .ticket-label {
   font-size: 10px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: row;
   letter-spacing: 1px;
