Add a Image (Media)

--- a/react-app/src/components/AllMedia/AllMedia.css
+++ b/react-app/src/components/AllMedia/AllMedia.css
@@ -32,6 +32,9 @@
 .all-media-links{
  padding: 20px 0px;
  margin-bottom: 30px;
+ display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .link-media-all{
