--- a/react-app/src/components/TicketForm/EditTicketForm/EditTicketForm.css
+++ b/react-app/src/components/TicketForm/EditTicketForm/EditTicketForm.css
@@ -16,6 +16,27 @@
   color: white;
 }
 
+.ticket-input {
+  padding: 15px 20px;
+  /* width: 100%; */
+}
+
+#ticket-des {
+  resize: none;
+  height: 100px;
+}
+
+.ticket-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  margin-top: 60px;
+  width: 800px;
+  margin-bottom: 60px;
+}
+
 .edit-ticket-form-title-des{
   display: flex;
   flex-direction: column;
