--- a/react-app/src/components/AllMedia/ImgModal.css
+++ b/react-app/src/components/AllMedia/ImgModal.css
@@ -11,6 +11,7 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 25;
+  color: #ECE8E1
 }
 
 .clicked-img {
@@ -40,8 +41,8 @@
 .img-title-buttons {
   display: flex;
   flex-direction: row;
-  color: #ECE8E1;
   height: 70px;
+  align-items: center;
 }
 
 .fa-angle-left,
@@ -49,3 +50,11 @@
   border: 1px solid #ECE8E1;
   padding: 25px;
 }
+
+.img-modal-img-title{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-left: 70px;
+}
+
