--- a/react-app/src/components/AllMedia/ImgModal.css
+++ b/react-app/src/components/AllMedia/ImgModal.css
@@ -58,3 +58,23 @@
   margin-left: 70px;
 }
 
+.button-delete-media{
+  background-color: transparent;
+  border: none;
+  color: #FF4655;
+  margin-right: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.button-delete-media:hover{
+  color: #ECE8E1;
+}
+
+.img-title-buttons-wrapper{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
