--- a/react-app/src/components/Navigation/NavBar.css
+++ b/react-app/src/components/Navigation/NavBar.css
@@ -1,7 +1,7 @@
 .nav-mother {
   background-color: #111111;
   width: 100%;
-  height: 72px;
+  height: 73.5px;
   position: fixed;
   z-index: 5;
   border-bottom: 1px solid #1A1A1A;
@@ -13,7 +13,7 @@
   width: 100%;
 }
 
-.nav-home-wrapper{
+.nav-home-wrapper {
   display: flex;
   width: 100px;
   margin: 20px 0px;
@@ -26,35 +26,35 @@
   align-items: center;
 }
 
-.nav-left{
+.nav-left {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap:20px;
+  gap: 20px;
   margin-left: 30px;
 }
 
-.nav-home-individual-logo{
+.nav-home-individual-logo {
   width: 30px;
   height: 30px;
 }
 
 
-.nav-home-individual-logo:hover{
+.nav-home-individual-logo:hover {
   filter: invert(50%) sepia(40%) saturate(5165%) hue-rotate(325deg) brightness(95%) contrast(114%)
 }
 
-.nav-home-logo:hover+div{
+.nav-home-logo:hover+div {
   color: #FF4655;
 }
 
 
-.nav-home:hover .nav-home-individual-logo{
+.nav-home:hover .nav-home-individual-logo {
   filter: invert(50%) sepia(40%) saturate(5165%) hue-rotate(325deg) brightness(95%) contrast(114%)
 }
 
-.nav-home:hover .nav-home-name{
+.nav-home:hover .nav-home-name {
   color: #FF4655;
 }
 
@@ -82,8 +82,46 @@
 .individual-action {
   text-decoration: none;
   color: white;
+  margin-right: 20px;
 }
 
-.HERE{
-  color:white
+.nav-profile {
+  color: white;
+  background-color: #282828;
+  margin-right: 40px;
+  padding: 7px 20px;
+  border-radius: 7px;
+  font-size: 14px;
+  position: relative;
+  display: inline-block;
+}
+
+.profile-dropdown {
+  display: none;
+  position: absolute;
+  background-color: #282828;
+  min-width: 208px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  top: 40px;
+  left: -135px;
+  z-index: 1;
+  border-top: #FF4655 4px solid;
+}
+
+.nav-right:hover .profile-dropdown {
+  display: block;
+}
+
+.drop-profile-name{
+  font-size: 16px;
+  padding-bottom: 10px;
+  padding: 12px 16px;
+
+}
+
+.drop-profile-button{
+  border-top: 1px solid #3f3f3f;
+  padding: 12px;
+  display: flex;
+  justify-content: flex-start;
 }
