--- a/react-app/src/components/AllMedia/AllMedia.css
+++ b/react-app/src/components/AllMedia/AllMedia.css
@@ -1,24 +1,75 @@
 .media {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
+  position: relative; */
+  position: relative;
+  display: grid;
+  /*   grid-template-columns: repeat(auto-fit,150px); */
+  grid-template-columns: repeat(4, auto);
+  grid-auto-flow: dense;
+  /*   display: flex; */
+  /*     justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: row; */
+  grid-auto-rows: 1fr;
+  grid-auto-flow: dense;
+  flex-basis: 200px;
 }
 
 .media-img {
-  width: 300px;
-  height: 100%;
+  /* max-width: 610px;
+  min-width: 300px;
+  max-height: 700px;
+  min-height: 350px; */
+  /*   display: flex; */
+  /* flex-grow: 1; */
+  /* flex: 1 1 90px; */
+  /* flex-basis: 33%; */
+  flex-flow: column nowrap;
+  transition: all 0.5s ease;
+  object-fit: cover;
 }
 
 .media-map {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
+  gap: 10px;
+  flex-grow: 1;
+  /* width: 1232px; */
+  height: auto;
 }
 
-.all-media{
+.all-media {
+  /* display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: row; */
+  /* grid-auto-flow: dense; */
   width: 1232px;
   margin-top: 80px;
   margin-bottom: 80px;
+}
+
+.media-item-title {
+  /* position: relative; */
+  position: absolute;
+  /* min-width: 50%; */
+  width: 60%;
+  text-overflow: ellipsis;
+  overflow-wrap: break-word;
+  white-space: wrap;
+  background-color: #0F1923;
+  color: #ECE8E1;
+  height: 5%;
+  display: flex;
+  align-items: center;
+  /* top: 550px; */
+  /* top: 40%; */
+  padding: 10px 15px;
+  font-size: 14px;
+  /* margin-bottom: -5%; */
 }
 
 .all-media-wrapper {
@@ -30,15 +81,16 @@
 }
 
 
-.all-media-links{
- padding: 20px 0px;
- margin-bottom: 30px;
- display: flex;
+.all-media-links {
+  padding: 20px 0px;
+  margin-bottom: 30px;
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
+  object-position: 50% 50%;
 }
 
-.link-media-all{
+.link-media-all {
   color: #111111;
   font-size: 16px;
   font-weight: 600;
