Sign In Form Validation

--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -156,5 +156,17 @@
 
 .logout-button:hover {
   background-color: #666666;
-  color:#ECECEC
+  color: #ECECEC
+}
+
+.sign-in-error {
+  border: 1px solid #E35B66;
+  background-color: #FFF0F1;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.caution{
+  width: 20px;
 }
