Ticket Form Error Validations

--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -174,7 +174,7 @@
   /* height: 24px; */
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   flex-direction: row;
   border-radius: 5px;
   margin-bottom: 10px;
