--- a/react-app/src/components/AllMedia/AllMedia.css
+++ b/react-app/src/components/AllMedia/AllMedia.css
@@ -8,6 +8,7 @@
   object-fit: cover;
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 
 .media-map {
@@ -51,6 +52,7 @@
   text-overflow: ellipsis;
   overflow-wrap: break-word;
   white-space: wrap;
+  cursor: pointer;
 }
 
 .all-media-wrapper {
