--- a/react-app/src/components/Navigation/NavBar.css
+++ b/react-app/src/components/Navigation/NavBar.css
@@ -121,12 +121,16 @@
   font-size: 16px;
   padding-bottom: 10px;
   padding: 12px 16px;
+}
 
+.nav-profile-nav-top{
+  cursor: pointer;
 }
 
 .drop-profile-button{
   border-top: 1px solid #3f3f3f;
   padding: 12px;
   display: flex;
+  /* cursor: pointer; */
   justify-content: flex-start;
 }
