--- a/react-app/src/components/AllMedia/ImgModal.css
+++ b/react-app/src/components/AllMedia/ImgModal.css
@@ -111,6 +111,6 @@
   height: 100%;
   z-index: 5;
   transition: .2s ease;
-  opacity: 60%;
+  opacity: 0.6;
   /* border: 1px solid #ECE8E1; */
 }
